added update profile endpoint
